--- a/package.json
+++ b/package.json
@@ -1,23 +1,7 @@
 {
-    "name": "client",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@material-ui/core": "^4.9.10",
-        "@material-ui/icons": "^4.9.1",
-        "@testing-library/jest-dom": "^4.2.4",
-        "@testing-library/react": "^9.3.2",
-        "@testing-library/user-event": "^7.1.2",
-        "axios": "^0.19.2",
-        "moment": "^2.27.0",
-        "react": "^16.12.0",
-        "react-dom": "^16.12.0",
-        "react-file-base64": "^1.0.3",
-        "react-redux": "^7.1.3",
-        "react-scripts": "3.4.1",
-        "redux": "^4.0.5",
-        "redux-thunk": "^2.3.0"
-    },
+    "name": "album-client",
+    "version": "1.0.0",
+    "description": "Album written by ilyas",
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
@@ -39,11 +23,33 @@
             "last 1 safari version"
         ]
     },
-    "devDependencies": {
-        "eslint-config-airbnb": "^18.2.0",
-        "eslint-plugin-import": "^2.22.0",
-        "eslint-plugin-jsx-a11y": "^6.3.1",
-        "eslint-plugin-react": "^7.20.6",
-        "eslint-plugin-react-hooks": "^4.1.0"
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/kocak-ilyas/album-client.git"
+    },
+    "keywords": [
+        "album"
+    ],
+    "author": "ilyas",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/kocak-ilyas/album-client/issues"
+    },
+    "homepage": "https://github.com/kocak-ilyas/album-client#readme",
+    "dependencies": {
+        "@material-ui/core": "^4.11.3",
+        "@material-ui/icons": "^4.11.2",
+        "@testing-library/jest-dom": "^5.11.9",
+        "@testing-library/react": "^11.2.5",
+        "@testing-library/user-event": "^12.7.1",
+        "axios": "^0.21.1",
+        "moment": "^2.29.1",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
+        "react-file-base64": "^1.0.3",
+        "react-redux": "^7.2.2",
+        "react-scripts": "^4.0.2",
+        "redux": "^4.0.5",
+        "redux-thunk": "^2.3.0"
     }
 }
