--- a/package.json
+++ b/package.json
@@ -37,18 +37,18 @@
     },
     "homepage": "https://github.com/kocak-ilyas/album-client#readme",
     "dependencies": {
-        "@material-ui/core": "^4.11.3",
-        "@material-ui/icons": "^4.11.2",
-        "@testing-library/jest-dom": "^5.11.9",
-        "@testing-library/react": "^11.2.5",
-        "@testing-library/user-event": "^12.7.1",
-        "axios": "^0.21.1",
-        "moment": "^2.29.1",
-        "react": "^17.0.1",
-        "react-dom": "^17.0.1",
+        "@material-ui/core": "^4.9.10",
+        "@material-ui/icons": "^4.9.1",
+        "@testing-library/jest-dom": "^4.2.4",
+        "@testing-library/react": "^9.3.2",
+        "@testing-library/user-event": "^7.1.2",
+        "axios": "^0.19.2",
+        "moment": "^2.27.0",
+        "react": "^16.12.0",
+        "react-dom": "^16.12.0",
         "react-file-base64": "^1.0.3",
-        "react-redux": "^7.2.2",
-        "react-scripts": "^4.0.2",
+        "react-redux": "^7.1.3",
+        "react-scripts": "3.4.1",
         "redux": "^4.0.5",
         "redux-thunk": "^2.3.0"
     }
