--- a/package.json
+++ b/package.json
@@ -8,14 +8,26 @@
         "type": "git",
         "url": "git+https://github.com/kocak-ilyas/album-client.git"
     },
-    "keywords": ["album"],
-    "bugs": { "url": "https://github.com/kocak-ilyas/album-client/issues" },
+    "keywords": [
+        "album"
+    ],
+    "bugs": {
+        "url": "https://github.com/kocak-ilyas/album-client/issues"
+    },
     "eslintConfig": {
         "extends": "react-app"
     },
     "browserslist": {
-        "production": [">0.2%", "not dead", "not op_mini all"],
-        "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
     },
     "scripts": {
         "start": "react-scripts start",
@@ -30,13 +42,18 @@
         "@testing-library/react": "^11.2.5",
         "@testing-library/user-event": "^12.7.1",
         "axios": "^0.21.1",
+        "jwt-decode": "^3.1.2",
         "moment": "^2.29.1",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-file-base64": "^1.0.3",
+        "react-google-login": "^5.2.2",
         "react-redux": "^7.2.2",
         "react-scripts": "^4.0.2",
         "redux": "^4.0.5",
         "redux-thunk": "^2.3.0"
+    },
+    "devDependencies": {
+        "eslint": "^7.20.0"
     }
 }
