--- a/package.json
+++ b/package.json
@@ -14,9 +14,6 @@
     "bugs": {
         "url": "https://github.com/kocak-ilyas/album-client/issues"
     },
-    "eslintConfig": {
-        "extends": "react-app"
-    },
     "browserslist": {
         "production": [
             ">0.2%",
@@ -54,6 +51,11 @@
         "redux-thunk": "^2.3.0"
     },
     "devDependencies": {
-        "eslint": "^7.20.0"
+        "eslint": "^7.20.0",
+        "eslint-config-standard": "^16.0.2",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-promise": "^4.3.1",
+        "eslint-plugin-react": "^7.22.0"
     }
 }
