--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,30 +1,32 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true,
-        "airbnb": true,
-        "prettier": true,
-        "prettier/react": true
+  "env": {
+    "browser": true,
+    "es2021": true,
+
+    "prettier": true,
+    "prettier/react": true
+    // "airbnb": true,
+  },
+  "extends": [
+    "react-app",
+    "react-app/jest",
+    "plugin:react/recommended",
+    "standard"
+  ],
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
     },
-    "extends": [
-        "plugin:react/recommended",
-        "standard"
-    ],
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": 12,
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react",
-        "prettier"
-    ],
-    "rules": {
-        "arrow-body-style":[
-            2,
-            "as-needed"
-        ]
-    }
+    "ecmaVersion": 12,
+    "sourceType": "module"
+  },
+  "plugins": ["react", "jsx-a11y"],
+  "rules": {
+    "object-curly-spacing": ["error", "always"],
+    "no-console": "warn",
+    "indent": ["error", "tab"],
+    "semi": ["error", "always"],
+    "arrow-body-style": [2, "as-needed"],
+    "prefer-arrow-callback": "error"
+  }
 }
