--- a/package.json
+++ b/package.json
@@ -26,6 +26,12 @@
             "last 1 safari version"
         ]
     },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
@@ -51,11 +57,23 @@
         "redux-thunk": "^2.3.0"
     },
     "devDependencies": {
-        "eslint": "^7.20.0",
+        "@typescript-eslint/eslint-plugin": "^4.0.0",
+        "@typescript-eslint/parser": "^4.0.0",
+        "babel-eslint": "^10.0.0",
+        "eslint": "^7.5.0",
+        "eslint-config-prettier": "^8.0.0",
+        "eslint-config-react-app": "^6.0.0",
         "eslint-config-standard": "^16.0.2",
-        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-flowtype": "^5.2.0",
+        "eslint-plugin-import": "^2.22.0",
+        "eslint-plugin-jsx-a11y": "^6.3.1",
         "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-prettier": "^3.3.1",
         "eslint-plugin-promise": "^4.3.1",
-        "eslint-plugin-react": "^7.22.0"
+        "eslint-plugin-react": "^7.20.3",
+        "eslint-plugin-react-hooks": "^4.0.8",
+        "firacode": "^5.2.0",
+        "prettier": "^2.2.1",
+        "pretty-quick": "^3.1.0"
     }
 }
