--- a/package.json
+++ b/package.json
@@ -60,6 +60,6 @@
         "@typescript-eslint/eslint-plugin": "^4.0.0",
         "@typescript-eslint/parser": "^4.0.0",
         "eslint-plugin-react": "^7.20.3",
-        "eslint-plugin-react-hooks": "^4.0.8",
+        "eslint-plugin-react-hooks": "^4.0.8"
     }
 }
