--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "react-file-base64": "^1.0.3",
         "react-google-login": "^5.2.2",
         "react-redux": "^7.2.2",
+        "react-router-dom": "^5.2.0",
         "react-scripts": "^4.0.2",
         "redux": "^4.0.5",
         "redux-thunk": "^2.3.0"
