--- a/package.json
+++ b/package.json
@@ -45,8 +45,6 @@
         "eslint-plugin-react": "^7.23.1",
         "eslint-plugin-react-hooks": "^4.2.0"
     },
-
-
     "dependencies": {
         "@material-ui/core": "^4.11.3",
         "@material-ui/icons": "^4.11.2",
@@ -62,8 +60,9 @@
         "react-google-login": "^5.2.2",
         "react-redux": "^7.2.3",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "^4.0.2",
+        "react-scripts": "^4.0.3",
         "redux": "^4.0.5",
-        "redux-thunk": "^2.3.0"
+        "redux-thunk": "^2.3.0",
+        "web-vitals": "^1.1.1"
     }
 }
